# muta

./: .gitignore  LICENSE  README.md  bun.lockb  main.py  package.json  predictor-test.ipynb  pyproject.toml  requirements.txt
ai-server/: main.py  pyproject.toml
dumps/: knn_76perc.pkl  knn_model.pkl
templates/: base.html  result.html
