[tool.poetry]
name = "muta"
version = "0.1.0"
description = ""
authors = ["Tarasikee <taras@deepinsight.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
plotly = "^5.22.0"
scikit-learn = "1.1.3"
matplotlib = "^3.9.0"
fastapi = "^0.111.0"
fastapi-cli = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
